Agregando filtro a los cursos

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -128,7 +128,9 @@ a:hover {
   margin: 0.3rem 0;
 }
 
-
+/* ================================
+ cv
+================================ */
 .cv-container {
   display: flex;
   justify-content: center;
